--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "Benoit Goupilleau",
   "license": "ISC",
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
